syntax = "proto3";

package pb;

option go_package = "./pb;pb";

service ProductService {
  rpc List (ListRequest) returns (stream ProductReply) {}
  rpc Get (GetRequest) returns (ProductReply) {}
  rpc Create (CreateRequest) returns (ProductReply) {}
  rpc Update (UpdateRequest) returns (ProductReply) {}
  rpc Delete (DeleteRequest) returns (ProductReply) {}
}

message ListRequest {
  int64 offset = 1;
  int64 limit = 2;
}

message GetRequest {
  string id = 1;
}

message CreateRequest {
  string name = 2;
  int64 price = 3;
}

message UpdateRequest {
  string id = 1;
  optional string name = 2;
  optional int64 price = 3;
}

message DeleteRequest {
  string id = 1;
}

message ProductReply {
  string id = 1;
  string name = 2;
  int64 price = 3;
  string seller = 4;
}
